--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "metadata": "cd blurhash-generator && go run . && cd -"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.0",
