--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-prism": "^1.3.6",
+    "sharp": "^0.32.0",
     "typescript": "5.0.3"
   }
 }
