--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "metadata": "cd blurhash-generator && go run . && cd -"
+    "blurhash": "cd blurhash-generator && go run . && cd -",
+    "metadata": "cd post-metadata-generator && go run . && cd -"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.0",
