--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vanilla-extract/css": "^1.11.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.2.5-canary.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-prism": "^1.3.6",
