allow serving images locally for development offline (say, on an airplane)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "blurhash": "cd blurhash-generator && go run . && cd -",
-    "metadata": "cd post-metadata-generator && go run . && cd -"
+    "metadata": "cd post-metadata-generator && go run . && cd -",
+    "serve": "cd img-serve && go run . && cd - || cd -"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.0",
