--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.4",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
-    "@vanilla-extract/css": "^1.11.0",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "^13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@next/mdx": "^13.3.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.34",
+    "@types/react-dom": "^18.0.11",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "next": "^13.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark-prism": "^1.3.6",
     "sharp": "^0.32.0",
-    "typescript": "5.0.3"
+    "typescript": "^5.0.4"
   }
 }
