--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
-    "next": "^13.3.0",
+    "next": "^13.3.1-canary.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-prism": "^1.3.6",
