--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
     "next": "^13.3.1-canary.7",
