--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^13.3.1-canary.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6",
     "sharp": "^0.32.0",
     "typescript": "^5.0.4"
