--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "@vercel/analytics": "^1.0.0",
+    "@vercel/edge-config": "^0.1.7",
     "@vercel/og": "^0.5.3",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
