--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "blurhash": "cd blurhash-generator && go run . && cd -",
     "metadata": "cd post-metadata-generator && go run . && cd -",
-    "serve": "cd img-serve && go run . && cd - || cd -"
+    "serve": "cd img-serve && go run . && cd - || cd -",
+    "process": "yarn blurhash && yarn metadata"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.0",
