--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vercel/og": "^0.5.4",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
-    "next": "^13.3.3-canary.0",
+    "next": "^13.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
