--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.2.1",
     "@vercel/analytics": "^1.0.0",
     "@vercel/edge-config": "^0.1.8",
+    "@vercel/kv": "^0.1.1",
     "@vercel/og": "^0.5.4",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
