--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@vercel/og": "^0.5.4",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.0",
-    "next": "13.3.4",
+    "next": "^13.4.1-canary.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
