--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.2",
+    "@next/mdx": "^13.4.4",
     "@planetscale/database": "^1.7.0",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.6",
@@ -32,7 +32,7 @@
     "@vercel/og": "^0.5.4",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
-    "next": "13.3.4",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
