--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "metadata": "cd post-metadata-generator && go run . && cd -",
     "serve": "cd img-serve && go run . && cd - || cd -",
     "process": "yarn blurhash && yarn metadata",
-    "validate-shortcodes": "node ./validate/validateShortcodes.js"
+    "validate-shortcodes": "node ./validate/validateShortcodes.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.0",
@@ -40,5 +42,18 @@
     "remark-prism": "^1.3.6",
     "sharp": "^0.32.6",
     "typescript": "^5.2.2"
-  }
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.5.0",
+    "@storybook/addon-interactions": "^7.5.0",
+    "@storybook/addon-links": "^7.5.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.0",
+    "@storybook/nextjs": "^7.5.0",
+    "@storybook/react": "^7.5.0",
+    "@storybook/testing-library": "^0.2.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "storybook": "^7.5.0"
+  },
+  "packageManager": "yarn@3.6.4"
 }
