--- a/.github/workflows/check_shortcodes.yml
+++ b/.github/workflows/check_shortcodes.yml
@@ -9,6 +9,9 @@ jobs:
   check-shortcodes:
     runs-on: ubuntu-latest
 
+    env:
+      FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
