--- a/.github/workflows/check_shortcodes.yml
+++ b/.github/workflows/check_shortcodes.yml
@@ -21,8 +21,5 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Install
-        run: yarn install
-
       - name: Run check-shortcodes script
-        run: yarn validate-shortcodes
+        run: node ./validate/validateShortcodes.js
