--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@storybook/react": "^7.5.0",
     "@storybook/testing-library": "^0.2.2",
     "eslint-plugin-storybook": "^0.6.15",
-    "storybook": "^7.5.0"
+    "storybook": "^7.5.0",
+    "webpack": "^5.89.0"
   },
   "packageManager": "yarn@3.6.4"
 }
