--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vercel/edge-config": "^0.4.1",
     "@vercel/kv": "^0.2.3",
     "@vercel/og": "^0.5.19",
+    "@vercel/speed-insights": "^0.0.4",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.4",
     "next": "^13.5.5",
