add interactive upgrade

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,13 @@
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
-
 npmScopes:
   fortawesome:
     npmAlwaysAuth: true
-    npmRegistryServer: "https://npm.fontawesome.com/"
     npmAuthToken: "${FONTAWESOME_NPM_AUTH_TOKEN}"
+    npmRegistryServer: "https://npm.fontawesome.com/"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-3.6.4.cjs
