--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-tweet": "^3.1.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
     "sharp": "^0.32.6",
