--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "process": "yarn blurhash && yarn metadata",
     "validate-shortcodes": "node ./validate/validateShortcodes.js",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "analyze": "NODE_OPTIONS=--max-old-space-size=4096 ANALYZE=true yarn build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.4.2",
@@ -23,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next/bundle-analyzer": "^14.0.4",
     "@next/mdx": "^14.0.2",
     "@planetscale/database": "^1.11.0",
     "@types/node": "^20.9.0",
