--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
     "sharp": "^0.33.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.10",
