--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vercel/speed-insights": "^1.0.9",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "geist": "^1.2.2",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
