--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "blurhash": "cd blurhash-generator && go run . && cd -",
-    "metadata": "cd post-metadata-generator && go run . && cd -",
+    "blurhash": "cd blurhash-generator && go run .",
+    "metadata": "cd post-metadata-generator && go run .",
     "serve": "cd img-serve && go run . && cd - || cd -",
     "process": "yarn blurhash && yarn metadata",
     "validate-shortcodes": "node ./validate/validateShortcodes.js",
