--- a/package.json
+++ b/package.json
@@ -44,13 +44,9 @@
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
     "sharp": "^0.33.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "packageManager": "yarn@3.6.4",
-  "resolutions": {
-    "browserify-sign": "^4.2.2"
-  },
   "devDependencies": {
     "@opentelemetry/api": "^1.7.0",
     "webpack": "^5.90.2"
