--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3561",
-    "build": "next build",
+    "build": "node -e \"console.log(new Date())\" > ./public/published.txt && next build",
     "start": "next start",
     "lint": "next lint",
     "blurhash": "cd blurhash-generator && go run .",
