--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next/bundle-analyzer": "^14.1.4",
     "@next/mdx": "^14.1.4",
     "@planetscale/database": "^1.16.0",
+    "@types/mdx": "^2.0.12",
     "@types/node": "^20.12.6",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
