--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+registries:
+  npm:
+    type: npm-registry
+    url: https://registry.npmjs.org
+    token: ${{secrets.DEP_NPM_TOKEN}}
