--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+    registries:
+      - npm
 registries:
   npm:
     type: npm-registry
