--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keegancodes/foundations": "^1.0.21",
     "@keegancodes/foundations-next": "^1.0.31",
-    "@keegancodes/foundations-react": "^1.0.28",
+    "@keegancodes/foundations-react": "^1.0.30",
     "@keegandonley/pro-regular-svg-icons": "^6.5.2",
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
     "@mdx-js/loader": "^3.0.1",
@@ -41,7 +41,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.1",
     "geist": "^1.3.0",
-    "next": "14.2.1",
+    "next": "v14.2.1-canary.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
