--- a/package.json
+++ b/package.json
@@ -41,15 +41,14 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.1",
     "geist": "^1.3.0",
-    "lowlight": "^3.1.0",
     "next": "14.2.1-canary.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-tweet": "^3.2.1",
-    "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-prism": "^1.3.6",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
