--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "geist": "^1.3.0",
-    "next": "14.3.0-canary.21",
+    "next": "14.2.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
