--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
+    "sanitize-html": "^2.13.0",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.8.0",
+    "@types/sanitize-html": "^2.11.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "webpack": "^5.91.0"
