--- a/package.json
+++ b/package.json
@@ -28,16 +28,13 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@next/mdx": "^14.2.3",
     "@planetscale/database": "^1.18.0",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^20.12.8",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/edge-config": "^1.1.0",
     "@vercel/kv": "^1.0.1",
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "dompurify": "^3.1.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "geist": "^1.3.0",
@@ -49,16 +46,19 @@
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
-    "sanitize-html": "^2.13.0",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.8.0",
-    "@types/sanitize-html": "^2.11.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "webpack": "^5.91.0"
+    "webpack": "^5.91.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^20.12.8",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0"
   }
 }
