--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
     "@vercel/og": "^0.6.2",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "geist": "^1.3.0",
-    "next": "14.2.3",
+    "next": "15.0.0-rc.0",
     "postcss": "^8.4.38",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-calendly": "^4.3.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
