--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@planetscale/database": "^1.18.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "@vercel/analytics": "^1.3.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.1.1",
     "@vercel/kv": "^1.0.1",
     "@vercel/og": "^0.6.2",
-    "@vercel/speed-insights": "^1.0.10",
+    "@vercel/speed-insights": "^1.0.11",
     "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "eslint": "^8.57.0",
