--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@keegancodes/foundations": "^1.1.1",
-    "@keegancodes/foundations-next": "^1.0.31",
-    "@keegancodes/foundations-react": "2.0.2",
+    "@keegancodes/foundations-next": "2.0.0-rc.0",
+    "@keegancodes/foundations-react": "3.0.0-rc.1",
     "@keegandonley/pro-regular-svg-icons": "^6.5.2",
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
     "@mdx-js/loader": "^3.0.1",
