ignore some warnings on install

--- a/package.json
+++ b/package.json
@@ -67,6 +67,14 @@
     "overrides": {
       "@types/react": "npm:types-react@rc",
       "@types/react-dom": "npm:types-react-dom@rc"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "@types/react": "19.0.0-rc.0",
+        "react": "19.0.0-rc-f994737d14-20240522",
+        "next": "15.0.0-rc.0",
+        "react-dom": "19.0.0-rc-f994737d14-20240522"
+      }
     }
   }
 }
