--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@next/mdx": "^14.2.3",
     "@planetscale/database": "^1.18.0",
+    "@sentry/nextjs": "^8",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.1",
     "@types/react": "npm:types-react@rc",
