--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@next/mdx": "^14.2.3",
     "@planetscale/database": "^1.18.0",
-    "@sentry/nextjs": "^8.7.0",
+    "@sentry/nextjs": "^8.8.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
     "@types/react": "npm:types-react@rc",
@@ -57,7 +57,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@opentelemetry/api": "1.8.0",
+    "@opentelemetry/api": "^1.9.0",
     "@types/sanitize-html": "^2.11.0",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.2",
