--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.1.1",
+    "@vercel/functions": "^1.0.2",
     "@vercel/kv": "^2.0.0",
     "@vercel/og": "^0.6.2",
     "autoprefixer": "^10.4.19",
