--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "@opentelemetry/api": "^1.9.0",
     "@types/sanitize-html": "^2.11.0",
+    "csv-parse": "^5.5.6",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "webpack": "^5.93.0"
