--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "eslint-config-next": "^14.2.15",
     "eslint-plugin-react-compiler": "0.0.0-experimental-56229e1-20240813",
     "geist": "^1.3.1",
-    "next": "15.0.0-rc.0",
+    "next": "^15.0.0-rc.1",
     "postcss": "^8.4.47",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "react": "^19.0.0-rc-83825814-20241015",
     "react-calendly": "^4.3.1",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "^19.0.0-rc-83825814-20241015",
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
