--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^14.2.15",
-    "@next/mdx": "^14.2.15",
+    "@next/bundle-analyzer": "15.0.2",
+    "@next/mdx": "15.0.2",
     "@planetscale/database": "^1.19.0",
     "@sentry/nextjs": "^8.34.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.7.7",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.3.0",
     "@vercel/functions": "^1.4.2",
@@ -41,14 +41,14 @@
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "0.0.0-experimental-7449567-20240905",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.15",
+    "eslint-config-next": "15.0.2",
     "eslint-plugin-react-compiler": "0.0.0-experimental-56229e1-20240813",
     "geist": "^1.3.1",
-    "next": "^15.0.0-rc.1",
+    "next": "15.0.2",
     "postcss": "^8.4.47",
-    "react": "^19.0.0-rc-83825814-20241015",
+    "react": "19.0.0-rc-02c0e824-20241028",
     "react-calendly": "^4.3.1",
-    "react-dom": "^19.0.0-rc-83825814-20241015",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
@@ -67,8 +67,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@rc",
-      "@types/react-dom": "npm:types-react-dom@rc"
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
     },
     "peerDependencyRules": {
       "allowedVersions": {
