--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@keegancodes/foundations": "^1.1.2",
-    "@keegancodes/foundations-next": "2.0.0-rc.0",
-    "@keegancodes/foundations-react": "3.0.0-rc.1",
+    "@keegancodes/foundations-next": "3.0.1",
+    "@keegancodes/foundations-react": "3.0.1",
     "@keegandonley/pro-regular-svg-icons": "^6.5.2",
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
     "@mdx-js/loader": "^3.1.0",
@@ -29,6 +29,7 @@
     "@next/mdx": "15.0.2",
     "@planetscale/database": "^1.19.0",
     "@sentry/nextjs": "^8.37.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.7.7",
     "@types/react": "npm:types-react@19.0.0-rc.1",
@@ -38,6 +39,7 @@
     "@vercel/functions": "^1.4.2",
     "@vercel/kv": "^3.0.0",
     "@vercel/og": "^0.6.3",
+    "@vercel/speed-insights": "^1.0.14",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "0.0.0-experimental-7449567-20240905",
     "eslint": "^8.57.0",
