--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@keegancodes/foundations-react": "3.0.1",
     "@keegandonley/pro-regular-svg-icons": "^6.5.2",
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
-    "@next/bundle-analyzer": "15.0.2",
-    "@next/mdx": "15.0.2",
+    "@next/bundle-analyzer": "^15.0.3",
+    "@next/mdx": "^15.0.3",
     "@planetscale/database": "^1.19.0",
     "@sentry/nextjs": "^8.37.1",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -37,14 +37,14 @@
     "@vercel/functions": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/og": "^0.6.3",
-    "@vercel/speed-insights": "^1.0.14",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.2",
+    "eslint-config-next": "^15.0.3",
     "eslint-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "geist": "^1.3.1",
-    "next": "15.0.2",
+    "next": "^15.0.3",
     "postcss": "^8.4.47",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-calendly": "^4.3.1",
