upgrade next and react

--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@keegandonley/fitness-embed": "^0.0.26",
     "@keegandonley/pro-regular-svg-icons": "^6.5.2",
     "@keegandonley/pro-solid-svg-icons": "^6.5.2",
-    "@next/bundle-analyzer": "^15.0.3",
-    "@next/mdx": "^15.0.3",
+    "@next/bundle-analyzer": "15.1.0",
+    "@next/mdx": "15.1.0",
     "@planetscale/database": "^1.19.0",
     "@sentry/nextjs": "^8.42.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.10.1",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "@vercel/analytics": "^1.4.1",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/functions": "^1.5.1",
@@ -44,14 +44,14 @@
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.3",
+    "eslint-config-next": "15.1.0",
     "eslint-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "geist": "^1.3.1",
-    "next": "^15.0.3",
+    "next": "15.1.0",
     "postcss": "^8.4.49",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "react": "19.0.0",
     "react-calendly": "^4.3.1",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0",
     "react-tweet": "^3.2.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
@@ -70,8 +70,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "19.0.1",
+      "@types/react-dom": "19.0.2"
     },
     "peerDependencyRules": {
       "allowedVersions": {
