--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
         "next": "15.0.2",
         "react-dom": "19.0.0-rc-02c0e824-20241028"
       }
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@vercel/speed-insights"
+    ]
   }
 }
