--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "analyze": "NODE_OPTIONS=--max-old-space-size=4096 ANALYZE=true pnpm build"
   },
   "dependencies": {
-    "@atproto/api": "^0.15.2",
-    "@aws-sdk/client-s3": "^3.787.0",
+    "@atproto/api": "^0.15.5",
+    "@aws-sdk/client-s3": "^3.796.0",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -29,10 +29,10 @@
     "@next/bundle-analyzer": "15.3.1",
     "@next/mdx": "15.3.1",
     "@planetscale/database": "^1.19.0",
-    "@sentry/nextjs": "^9.13.0",
+    "@sentry/nextjs": "^9.14.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.2",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.1.2",
     "@vercel/analytics": "^1.5.0",
@@ -43,7 +43,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-plugin-react-compiler": "19.0.0-beta-714736e-20250131",
     "geist": "^1.3.1",
@@ -66,7 +66,7 @@
     "csv-parse": "^5.6.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "webpack": "^5.99.5"
+    "webpack": "^5.99.7"
   },
   "pnpm": {
     "overrides": {
@@ -87,7 +87,8 @@
       "@keegandonley/pro-solid-svg-icons",
       "@sentry/cli",
       "@vercel/speed-insights",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ]
   },
   "packageManager": "pnpm@10.9.0+sha256.ea53ab747ac8b7921de63b42eab1adf021e1fe6ded05f62f00885cc33a46118d"
