--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "dependencies": {
     "@atproto/api": "^0.15.5",
     "@aws-sdk/client-s3": "^3.796.0",
-    "@fortawesome/fontawesome-svg-core": "6.6.0",
-    "@fortawesome/free-brands-svg-icons": "6.6.0",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@keegancodes/foundations": "^1.1.2",
     "@keegancodes/foundations-next": "4.0.2",
     "@keegancodes/foundations-react": "3.0.3",
     "@keegandonley/fitness-embed": "^0.0.28",
-    "@keegandonley/pro-regular-svg-icons": "^6.5.2",
-    "@keegandonley/pro-solid-svg-icons": "^6.5.2",
+    "@keegandonley/pro-regular-svg-icons": "^6.7.2",
+    "@keegandonley/pro-solid-svg-icons": "^6.7.2",
     "@next/bundle-analyzer": "15.3.1",
     "@next/mdx": "15.3.1",
     "@planetscale/database": "^1.19.0",
@@ -33,7 +33,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.15.2",
-    "@types/react": "19.0.1",
+    "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
@@ -42,10 +42,10 @@
     "@vercel/og": "^0.6.8",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
-    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
-    "eslint-plugin-react-compiler": "19.0.0-beta-714736e-20250131",
+    "eslint-plugin-react-compiler": "19.1.0-rc.1",
     "geist": "^1.3.1",
     "next": "15.3.1",
     "postcss": "^8.5.3",
@@ -53,6 +53,7 @@
     "react-calendly": "^4.3.1",
     "react-dom": "19.1.0",
     "react-tweet": "^3.2.2",
+    "react@latest": "link:@@types/react@latest",
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
     "sanitize-html": "^2.16.0",
@@ -69,18 +70,6 @@
     "webpack": "^5.99.7"
   },
   "pnpm": {
-    "overrides": {
-      "@types/react": "19.0.1",
-      "@types/react-dom": "19.1.2"
-    },
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "@types/react": "19.0.0-rc.1",
-        "react": "19.0.0-rc-02c0e824-20241028",
-        "next": "15.0.2",
-        "react-dom": "19.0.0-rc-02c0e824-20241028"
-      }
-    },
     "onlyBuiltDependencies": [
       "@fortawesome/fontawesome-common-types",
       "@keegandonley/pro-regular-svg-icons",
