--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "remark-prism": "^1.3.6",
     "sanitize-html": "^2.16.0",
     "sharp": "^0.34.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -78,7 +78,12 @@
       "@vercel/speed-insights",
       "sharp",
       "unrs-resolver"
-    ]
+    ],
+    "updateConfig": {
+      "ignoreDependencies": [
+        "tailwindcss"
+      ]
+    }
   },
   "packageManager": "pnpm@10.11.0+sha256.a69e9cb077da419d47d18f1dd52e207245b29cac6e076acedbeb8be3b1a67bd7"
 }
