--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "analyze": "NODE_OPTIONS=--max-old-space-size=4096 ANALYZE=true pnpm build"
   },
   "dependencies": {
-    "@atproto/api": "^0.15.5",
-    "@aws-sdk/client-s3": "^3.797.0",
+    "@atproto/api": "^0.15.7",
+    "@aws-sdk/client-s3": "^3.812.0",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -29,24 +29,24 @@
     "@next/bundle-analyzer": "15.3.2",
     "@next/mdx": "15.3.2",
     "@planetscale/database": "^1.19.0",
-    "@sentry/nextjs": "^9.19.0",
+    "@sentry/nextjs": "^9.20.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.19",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
-    "@vercel/functions": "^2.0.0",
+    "@vercel/functions": "^2.1.0",
     "@vercel/kv": "^3.0.0",
     "@vercel/og": "^0.6.8",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
-    "babel-plugin-react-compiler": "19.1.0-rc.1",
-    "eslint": "^9.25.1",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint": "^9.27.0",
     "eslint-config-next": "15.3.2",
-    "eslint-plugin-react-compiler": "19.1.0-rc.1",
-    "geist": "^1.3.1",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "geist": "^1.4.2",
     "next": "15.3.2",
     "postcss": "^8.5.3",
     "react": "19.1.0",
@@ -56,18 +56,18 @@
     "react@latest": "link:@@types/react@latest",
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
-    "sanitize-html": "^2.16.0",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.34.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^5.8.3",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@types/sanitize-html": "^2.15.0",
+    "@types/sanitize-html": "^2.16.0",
     "csv-parse": "^5.6.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "webpack": "^5.99.7"
+    "webpack": "^5.99.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
