--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "remark-prism": "^1.3.6",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.1",
-    "tailwindcss": "^5.8.3",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
