--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "analyze": "NODE_OPTIONS=--max-old-space-size=4096 ANALYZE=true pnpm build"
   },
   "dependencies": {
-    "@atproto/api": "^0.15.14",
-    "@aws-sdk/client-s3": "^3.826.0",
+    "@atproto/api": "^0.15.18",
+    "@aws-sdk/client-s3": "^3.837.0",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -26,29 +26,30 @@
     "@keegandonley/fitness-embed": "^0.0.28",
     "@keegandonley/pro-regular-svg-icons": "^6.7.2",
     "@keegandonley/pro-solid-svg-icons": "^6.7.2",
-    "@next/bundle-analyzer": "15.3.3",
-    "@next/mdx": "15.3.3",
+    "@next/bundle-analyzer": "15.3.4",
+    "@next/mdx": "15.3.4",
     "@planetscale/database": "^1.19.0",
-    "@sentry/nextjs": "^9.27.0",
+    "@sentry/nextjs": "^9.32.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.15.30",
-    "@types/react": "19.1.6",
+    "@types/node": "^24.0.4",
+    "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
-    "@vercel/functions": "^2.1.0",
+    "@vercel/functions": "^2.2.2",
     "@vercel/kv": "^3.0.0",
     "@vercel/og": "^0.6.8",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "15.3.3",
+    "bundle-analyzer@latest": "link:@@next/bundle-analyzer@latest",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.4",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "geist": "^1.4.2",
-    "next": "15.3.3",
-    "postcss": "^8.5.4",
+    "next": "15.3.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-calendly": "^4.4.0",
     "react-dom": "19.1.0",
@@ -65,8 +66,8 @@
     "@opentelemetry/api": "^1.9.0",
     "@types/sanitize-html": "^2.16.0",
     "csv-parse": "^5.6.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prettier": "^3.6.1",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "webpack": "^5.99.9"
   },
   "pnpm": {
